# Mobile-Robot

./: .gitattributes  .gitignore  README.md
arduino_code/: robotarm_jogging_homing.ino
ired_ws/src/ired_aruco/: package.xml  setup.cfg  setup.py
ired_ws/src/ired_aruco/aruco_pose_estimation/: package.xml
ired_ws/src/ired_aruco/ired_aruco/: aruco_node.py
ired_ws/src/ired_aruco/launch/: ired_aruco.launch.py
ired_ws/src/ired_bringup/: package.xml  setup.cfg  setup.py
ired_ws/src/ired_bringup/ired_bringup/: forward_kinematics.py  imu.py  inverse_kinematics.py  modbus_serial.py  odom.py
ired_ws/src/ired_bringup/launch/: bringup.launch.py  robot_urdf.launch.py
ired_ws/src/ired_bringup/param/: ired.yaml  laser_config.yaml
ired_ws/src/ired_bringup/urdf/: ired.urdf.xacro
ired_ws/src/ired_msgs/: CMakeLists.txt  package.xml
ired_ws/src/ired_msgs/msg/: MotorControl.msg  MotorData.msg  MotorSpeed.msg
ired_ws/src/ired_msgs/srv/: PIDTuning.srv
ired_ws/src/ired_navigation2/param/: navigation.yaml
ired_ws/src/ros2_grbl_ramps_interfaces/: CMakeLists.txt  package.xml
ired_ws/src/ros2_grbl_ramps_interfaces/msg/: GrblStatus.msg
ired_ws/src/ros2_grbl_ramps_interfaces/srv/: Home.srv  JogXYZ.srv  Realtime.srv  SendGcode.srv  SetUnits.srv
ired_ws/src/ros2_grbl_ramps_service/: package.xml  setup.cfg  setup.py
ired_ws/src/ros2_grbl_ramps_service/config/: params.yaml
ired_ws/src/ros2_grbl_ramps_service/launch/: grbl_bridge.launch.py
ired_ws/src/ros2_grbl_ramps_service/ros2_grbl_ramps_service/: gcode_queue.py  grbl_bridge_node.py  ultrasonic_guard_node.py
(+3 files in other folders)
